# influxdb2

./: Cargo.toml  README.md
examples/: health.rs  label.rs  measurement.rs  multifield.rs  precision.rs  query.rs  ready.rs  setup.rs  write.rs  write_with_builder.rs
src/: lib.rs
src/api/: authorizations.rs  buckets.rs  delete.rs  health.rs  label.rs  organization.rs  query.rs  ready.rs  setup.rs  task.rs  write.rs
tests/: health.rs  setup.rs
tests/common/: server_fixture.rs
